data/src/main/java/com/example/data/calladapter/error/ErrorMessageExtractor.kt
package com.example.data.calladapter.error

interface ErrorMessageExtractor {
    fun extract(responseBody:String): String
}